--- a/contrib/migratejcr/pom.xml
+++ b/contrib/migratejcr/pom.xml
@@ -16,11 +16,11 @@
   <parent>
     <groupId>org.sakaiproject.nakamura</groupId>
     <artifactId>base</artifactId>
-    <version>0.10-SNAPSHOT</version>
+    <version>0.10</version>
   </parent>
   <artifactId>org.sakaiproject.nakamura.migratejcr</artifactId>
   <packaging>bundle</packaging>
-  <version>0.10-SNAPSHOT</version>
+  <version>0.10</version>
   <name>Sakai Nakamura: Migrate JCR</name>
   <description>Moves data from Jackrabbit JCR to sparse content storage.</description>
   <build>
@@ -87,7 +87,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.core</artifactId>
-      <version>0.10-SNAPSHOT</version>
+      <version>0.10</version>
     </dependency>
   </dependencies>
 </project>
