Bing to 3akai_ux version 0.6 since that's what the nyuatlas mayday branch produces.

--- a/contrib/nyu/pom.xml
+++ b/contrib/nyu/pom.xml
@@ -13,7 +13,7 @@
   <version>1.0-SNAPSHOT</version>
   <properties>
     <nakamura.version>0.10</nakamura.version>
-    <ux.version>0.6.0-SNAPSHOT</ux.version>
+    <ux.version>0.6</ux.version>
   </properties>
   <packaging>jar</packaging>
   <build>
