--- a/contrib/migratejcr/pom.xml
+++ b/contrib/migratejcr/pom.xml
@@ -89,5 +89,11 @@
       <artifactId>org.sakaiproject.nakamura.core</artifactId>
       <version>0.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.sakaiproject.nakamura</groupId>
+      <artifactId>org.sakaiproject.nakamura.utils</artifactId>
+      <version>0.10</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
