--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,15 @@
        </modules>
     </profile>
     <profile>
+       <id>nyu</id>
+       <modules>
+        <module>contrib/ldapauth</module>
+        <module>contrib/ldap</module>
+        <module>contrib/oracle-jdbc</module>
+        <module>contrib/nyu</module>
+       </modules>
+    </profile>
+    <profile>
        <id>sandbox</id>
        <modules>
         <module>sandbox/jaxrs</module>
