--- a/contrib/nyu/pom.xml
+++ b/contrib/nyu/pom.xml
@@ -13,7 +13,7 @@
   <version>1.0-SNAPSHOT</version>
   <properties>
     <nakamura.version>0.11-SNAPSHOT</nakamura.version>
-    <ux.version>0.6.0-SNAPSHOT</ux.version>
+    <ux.version>0.7-SNAPSHOT</ux.version>
   </properties>
   <packaging>jar</packaging>
   <build>
@@ -80,7 +80,19 @@
                   <version>${ux.version}</version>
                   <startLevel>30</startLevel>
                 </bundle>
-                <!-- sandbox bundles -->
+		<bundle>
+		  <groupId>edu.internet2.middleware.grouper</groupId>
+		  <artifactId>grouperClient.osgi</artifactId>
+		  <version>1.7.0</version>
+		  <startLevel>25</startLevel>
+		</bundle>
+		<bundle>
+		  <groupId>org.sakaiproject.nakamura</groupId>
+		  <artifactId>org.sakaiproject.nakamura.grouper.sync</artifactId>
+		  <version>${nakamura.version}</version>
+		  <startLevel>30</startLevel>
+		</bundle>
+		<!-- sandbox bundles -->
               </additionalBundles>
             </configuration>
           </execution>
