--- a/contrib/nyu/pom.xml
+++ b/contrib/nyu/pom.xml
@@ -56,6 +56,7 @@
               -->
               <additionalBundles>
                 <!-- contrib bundles -->
+                <!-- Removed 2011/06/08 by Carl Hall (Hallway Tech) to use SAML/SSO
                 <bundle>
                   <groupId>org.sakaiproject.nakamura</groupId>
                   <artifactId>org.sakaiproject.nakamura.ldap</artifactId>
@@ -65,6 +66,13 @@
                 <bundle>
                   <groupId>org.sakaiproject.nakamura</groupId>
                   <artifactId>org.sakaiproject.nakamura.auth.ldap</artifactId>
+                  <version>${nakamura.version}</version>
+                  <startLevel>30</startLevel>
+                </bundle>
+                -->
+                <bundle>
+                  <groupId>org.sakaiproject.nakamura</groupId>
+                  <artifactId>org.sakaiproject.nakamura.auth.saml</artifactId>
                   <version>${nakamura.version}</version>
                   <startLevel>30</startLevel>
                 </bundle>
