--- a/contrib/samlauth/pom.xml
+++ b/contrib/samlauth/pom.xml
@@ -21,7 +21,7 @@
   </parent>
   <artifactId>org.sakaiproject.nakamura.auth.saml</artifactId>
   <packaging>bundle</packaging>
-  <version>0.11-SNAPSHOT</version>
+  <version>0.10</version>
   <name>Sakai Nakamura :: SAML Authentication Bundle</name>
   <description>Provides SAML based authentication support to the request cycle.</description>
   <build>
