Added host only comparator.

--- a/contrib/samlauth/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/samlauth/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -58,8 +58,8 @@ sakai.auth.saml.user.missing.description = The URL to direct an authenticated us
 sakai.auth.saml.destination.match.name = Match destination?
 sakai.auth.saml.destination.match.description = Should the validation steps include \
  matching the destination of the message with the receiving destination? none = no \
- matching; simple = match only schema + server name + context (exclude querystring); \
- canonical = full match
+ matching ; host = match only the host name; simple = match only scheme + server name \
+ + context (exclude query string); canonical = full match
 sakai.auth.saml.signature.location.name = Signature Location
 sakai.auth.saml.signature.location.description = Where the validation steps should look \
  for the signature on the message.
