--- a/contrib/migratetov1/pom.xml
+++ b/contrib/migratetov1/pom.xml
@@ -88,8 +88,10 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.core</artifactId>
-      <version>1.0-NYUMIGRATION</version>
+      <version>1.0-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.solr</artifactId>
