--- a/contrib/migratetov1/pom.xml
+++ b/contrib/migratetov1/pom.xml
@@ -106,6 +106,12 @@
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
+      <artifactId>org.sakaiproject.nakamura.cluster</artifactId>
+      <version>0.11-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.resource</artifactId>
       <version>0.11-SNAPSHOT</version>
       <scope>provided</scope>
