--- a/contrib/migratetov1/pom.xml
+++ b/contrib/migratetov1/pom.xml
@@ -76,6 +76,10 @@
     	<version>2.0</version>
     </dependency>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.jcr.api</artifactId>
       <version>2.1.0</version>
