Add a config option for institutional groups.

--- a/contrib/grouper/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/grouper/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -60,6 +60,8 @@ grouper.nameprovider.simplegroups.stem.name	= Simple Group Base Stem
 grouper.nameprovider.simplegroups.stem.description	= Where adhoc simple groups will be added to Grouper
 grouper.nameprovider.courses.stem.name	= Course Group Base Stem
 grouper.nameprovider.courses.stem.description	= Where adhoc course groups will be added to Grouper
+grouper.institutional.courses.stem = Institutional Data
+grouper.institutional.courses.description = Where your institution stores official read-only course data. (OPTIONAL)
 
 transacted.name = Use JMS Transactions
 transacted.description = Whether or not to use JMS transactions.
