Made the nyu profile active by default

--- a/pom.xml
+++ b/pom.xml
@@ -108,8 +108,11 @@
     </profile>
     <profile>
        <id>nyu</id>
+       <activation>
+        <activeByDefault>true</activeByDefault>
+       </activation>
        <modules>
-        <!-- Can remove the LDAP contribs; these were put in to have have dual auths for NYU's production (saml) and various test (ldap) servers -->
+        <!-- Can remove the LDAP contribs; these were put in to have have dual auths for NYU's production (saml) and various test (ldap) servers.  Also in app/src/main/bundle/list.xml -->
         <module>contrib/ldap</module>
         <module>contrib/ldapauth</module>
         <module>contrib/samlauth</module>
