--- a/contrib/grouper/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/grouper/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -51,17 +51,19 @@ grouper.ignoredGroupsPatterns.description = A list of regular expressions to ign
 grouper.psuedoGroup.suffixes.name = Special Group Suffixes
 grouper.psuedoGroup.suffixes.description = Groups with these suffixes will be represented in grouper as stem:gid:suffix
 
-
 grouper.enable.deletes.name = Delete Groups? 
 grouper.enable.deletes.description = Delete the grouper group when deleting the Sakai OAE group.
-grouper.disable.for.testing.name = Tets Mode
+grouper.disable.for.testing.name = Test Mode
 grouper.disable.for.testing.description = Don't make any calls to the Grouper web services.
+
 grouper.nameprovider.contacts.stem.name	= Contact Groups Base Stem
 grouper.nameprovider.contacts.stem.description	= Where contacts groups will be added to Grouper
 grouper.nameprovider.simplegroups.stem.name	= Simple Group Base Stem
 grouper.nameprovider.simplegroups.stem.description	= Where adhoc simple groups will be added to Grouper
-grouper.nameprovider.courses.stem.name	= Course Group Base Stem
-grouper.nameprovider.courses.stem.description	= Where adhoc course groups will be added to Grouper
+grouper.nameprovider.adhoc.courses.stem.name	= Adhoc Course Group Stem
+grouper.nameprovider.adhoc.courses.stem.description	= Where adhoc course groups will be added to Grouper
+grouper.nameprovider.provisioned.courses.stem.name	= Provisioned Course Group Stem
+grouper.nameprovider.provisioned.courses.stem.description	= Where provisioned course groups will be added to Grouper
 grouper.institutional.courses.stem.name	 = Institutional Data
 grouper.institutional.courses.stem.decription = Where your institution stores official read-only course data. (OPTIONAL)
 
