Add a mapping for application extensions to institutional extensions. example: lecturers => instructors

--- a/contrib/grouper/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/grouper/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -76,3 +76,5 @@ grouper.nameprovider.template.template.name = Template
 grouper.nameprovider.template.template.description = Used to render the grouper name. Uses the matches from the regex as the array $g
 grouper.extension.overrides.name = Extension Overrides
 grouper.extension.overrides.description = Override pseudo-group extensions when sent to grouper. Stored as a mapping pseudogroup:grouperExtension
+grouper.institutional.extension.overrides.name = Institutional Extension Overrides
+grouper.institutional.extension.overrides.description = Map application group extensions to institutional group extensions.
