--- a/bundles/dropbox/pom.xml
+++ b/bundles/dropbox/pom.xml
@@ -78,7 +78,7 @@
       <artifactId>org.sakaiproject.nakamura.templates</artifactId>
       <version>0.10</version>
     </dependency>
-  	<dependency>
+    <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.commons.osgi</artifactId>
       <version>2.0.4-incubator</version>
@@ -175,6 +175,11 @@
        <artifactId>org.apache.sling.fsresource</artifactId>
        <version>1.0.0</version>
        <scope>test</scope>
-    </dependency>
+    </dependency>    
+    <dependency>
+      <groupId>org.sakaiproject.nakamura</groupId>
+      <artifactId>org.sakaiproject.nakamura.cluster</artifactId>
+      <version>0.11-SNAPSHOT</version>      
+    </dependency>        
   </dependencies>
 </project>
