--- a/contrib/oracle-jdbc/pom.xml
+++ b/contrib/oracle-jdbc/pom.xml
@@ -5,6 +5,7 @@
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>base</artifactId>
       <version>0.11-SNAPSHOT</version>
+      <relativePath>../../pom.xml</relativePath>
     </parent>
     <groupId>org.sakaiproject.nakamura</groupId>
     <artifactId>org.sakaiproject.nakamura.ojdbc</artifactId>
