--- a/contrib/samlauth/pom.xml
+++ b/contrib/samlauth/pom.xml
@@ -17,6 +17,7 @@
     <groupId>org.sakaiproject.nakamura</groupId>
     <artifactId>base</artifactId>
     <version>0.11-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>org.sakaiproject.nakamura.auth.saml</artifactId>
   <packaging>bundle</packaging>
