--- a/contrib/ldapauth/pom.xml
+++ b/contrib/ldapauth/pom.xml
@@ -23,6 +23,7 @@
     <groupId>org.sakaiproject.nakamura</groupId>
     <artifactId>base</artifactId>
     <version>1.0.2</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>org.sakaiproject.nakamura.auth.ldap</artifactId>
   <packaging>bundle</packaging>
