--- a/contrib/grouper/pom.xml
+++ b/contrib/grouper/pom.xml
@@ -22,7 +22,8 @@
 	<parent>
 		<artifactId>base</artifactId>
 		<groupId>org.sakaiproject.nakamura</groupId>
-		<version>0.11-SNAPSHOT</version>
+		<version>1.0.2</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -30,7 +31,7 @@
 	<artifactId>org.sakaiproject.nakamura.grouper.sync</artifactId>
 	<packaging>bundle</packaging>
 	<name>Sakai Nakamura :: Grouper Event Handler</name>
-	<version>0.11-SNAPSHOT</version>
+	<version>1.0.2</version>
 
 	<repositories>
 		<repository>
@@ -82,7 +83,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.core</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 			<type>bundle</type>
 		</dependency>
 
@@ -96,7 +97,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.user</artifactId>
-			<version>0.11-SNAPSHOT</version>
+			<version>1.0.2</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
@@ -104,7 +105,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.utils</artifactId>
-			<version>0.11-SNAPSHOT</version>
+			<version>1.0.2</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
@@ -232,7 +233,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.solr</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.2</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
