--- a/pom.xml
+++ b/pom.xml
@@ -971,7 +971,7 @@
       <dependency>
         <groupId>org.apache.sling</groupId>
         <artifactId>org.apache.sling.fsresource</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.0.2</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -1089,7 +1089,7 @@
       <dependency>
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>jaxrs-api</artifactId>
-        <version>1.1-SNAPSHOT.GA</version>
+        <version>1.0.2.GA</version>
         <scope>provided</scope>
       </dependency>
 
