--- a/contrib/grouper/pom.xml
+++ b/contrib/grouper/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>base</artifactId>
 		<groupId>org.sakaiproject.nakamura</groupId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.user</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
@@ -105,7 +105,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.utils</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
@@ -284,14 +284,14 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.email.outgoing</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.messaging</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 			<type>bundle</type>
 			<scope>compile</scope>
 		</dependency>
@@ -305,7 +305,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.nakamura</groupId>
 			<artifactId>org.sakaiproject.nakamura.templates</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 			<type>bundle</type>
 		</dependency>
 	</dependencies>
